<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- Main settings screen -->
    <string name="app_name">YourTube</string>
    <string name="xposed_description">Various customizations for the official YouTube app.</string>
    <string name="pref_default_pane_title">Default Pane</string>
    <string name="pref_playlist_title">Playlist ID</string>
    <string name="pref_subscription_title">Subscription ID</string>
    <string name="pref_maximum_stream_quality_title">Maximum default quality</string>
    <string name="pref_maximum_stream_quality_summary">Experimental.</string>
    <string name="pref_override_device_support_title">Override device support</string>
    <string name="pref_override_device_support_summary">Experimental. Override 720p, 1080p, 1440p
        and 2160p compatibility checks.</string>
    <string name="pref_support_title">Support</string>
    <string name="pref_show_app_icon_title">Show launcher icon</string>

    <!-- List entries -->
    <string name="what_to_watch">What To Watch</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="watch_later">Watch Later</string>
    <string name="playlist">Playlist</string>
    <string name="subscription">Subscription</string>
    <string name="browse_channels">Browse Channels</string>
    <string name="quality_auto">Auto</string>
    <string name="quality_144p">144p</string>
    <string name="quality_240p">240p</string>
    <string name="quality_360p">360p</string>
    <string name="quality_480p">480p</string>
    <string name="quality_720p">720p</string>
    <string name="quality_1080p">1080p</string>
    <string name="quality_1440p">1440p</string>
    <string name="quality_2160p">2160p</string>

</resources>
